--- a/templates/users/base.html.twig
+++ b/templates/users/base.html.twig
@@ -27,7 +27,7 @@
                         <div class="row">
                             <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
                             <div class="text-principal justify-content-center">Nombre de stream crée</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">17</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbStream"></div>
                             </div>
                         </div>
                         </div>
@@ -41,7 +41,7 @@
                       <div class="row">
                           <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
                           <div class="text-bleue">Nombre de mise en favoris</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">3'912</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbFavoris"></div>
                           </div>
                       </div>
                       </div>
@@ -55,7 +55,7 @@
                       <div class="row">
                         <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
                           <div class="text-turquoise">Total d'écoutes</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">19'562</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800" id="ecouteGlobal"></div>
                         </div>
                       </div>
                     </div>
@@ -69,7 +69,7 @@
                         <div class="row">
                             <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
                               <div class="text-purple">Nombre de stream planifié</div>
-                              <div class="h5 font-weight-bold text-gray-800">34</div>
+                              <div class="h5 font-weight-bold text-gray-800" id="nbPlaning"></div>
                             </div>
                         </div>
                     </div>
