--- a/templates/users/sidebar.html.twig
+++ b/templates/users/sidebar.html.twig
@@ -42,7 +42,7 @@
         <!-- Nav Item -status -->
     <li class="nav-item active">
         <a class="nav-link d-flex align-items-center justify-content-center" href="#">
-            <span>Status de la chaîne : Active</span>
+            <span>Status de la chaîne : <span id='status'></span></span>
         </a>
     </li>
 
@@ -61,3 +61,24 @@
 
 <!-- Content Wrapper -->
 <div id="content-wrapper">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ <script>
+
+
+    let store = true;
+    const token = localStorage.getItem("token");
+
+
+        if(token !== "") {
+        let username     =  localStorage.getItem("username");
+        let userAvatar   =  localStorage.getItem("avatar");
+        let userPassword =  localStorage.getItem("password");
+        let userId       =  localStorage.getItem("userId");
+        let channelId    =  localStorage.getItem("channelId");
+        let status       =  localStorage.getItem("status");
+
+        $('#myname').html(username);
+        $('#logo-setting').attr('src', userAvatar);
+        $('#status').html(status);
+    }
+</script>
